Fix for issues 6132, 6188, 6167. Comboboxes were squished in genie. Added style.height to combobox div, and changed combo-main-box left to 0px from 1px.

--- a/proddata/css/profoundui.css
+++ b/proddata/css/profoundui.css
@@ -5163,7 +5163,7 @@ div.Glass>.pui-tablayout-body>div {
   outline: none;
   position: absolute;
   top: 0px;
-  left: 1px;
+  left: 0px;
 }
 
 .combo-spacer {
